Added PageService.cs, ViewModels, ChapterSelectionListViewPage.cs
Updated Premissions in Manifest for external storage write/read access
Updated ContainerConfig.cs for Autofac
Updated vocabs.txt names and changed to embeded resources
implemented MVVM

--- a/VokabelTrainer3/VokabelTrainer3/Views/WelcomePage.xaml
+++ b/VokabelTrainer3/VokabelTrainer3/Views/WelcomePage.xaml
@@ -5,11 +5,11 @@
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to the vocabulary trainer" HorizontalOptions="Center"/>
-            <Button Text="Options" Command="Command_Options"/>
-            <Button Text="Basic Vocabs" Command="Command_BasicVocabs"/>
-            <Button Text="Advanced Vocabs" Command="Command_AdvancedVocabs"/>
-            <Button Text="Custom Vocabs" Command="Command_CustomVocabs"/>
-            <Button Text="Statistics" Command="Command_Statistics"/>
+            <Button Text="Options" Command="{Binding Command_Options}"/>
+            <Button Text="Basic Vocabs" Command="{Binding Command_BasicVocabs}"/>
+            <Button Text="Advanced Vocabs" Command="{Binding Command_AdvancedVocabs}"/>
+            <Button Text="Custom Vocabs" Command="{Binding Command_CustomVocabs}"/>
+            <Button Text="Statistics" Command="{Binding Command_Statistics}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
