added a DEMO of an expandable listview to ChapterSelectionListViewPage.cs need to create the listview from directories

--- a/VokabelTrainer3/VokabelTrainer3/Views/ChapterSelectionListViewPage.xaml
+++ b/VokabelTrainer3/VokabelTrainer3/Views/ChapterSelectionListViewPage.xaml
@@ -17,7 +17,9 @@
                     <ContentView>
                         <Label Text="{Binding GroupName}" VerticalOptions="Center"/>
                         <ContentView.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding Source={x:Reference ChapterSelectionPage}, Path=BindingContext.HeaderSelectedCommand}"/>
+                            <TapGestureRecognizer Command="{Binding Source={x:Reference ChapterSelectionPage}, 
+                                                                    Path=BindingContext.HeaderSelectedCommand}" 
+                                                  CommandParameter="{Binding GroupName}"/>
                         </ContentView.GestureRecognizers>
                     </ContentView>
                 </ViewCell>
