Added Tilte foreach page.
-> not supported when navigating from QuizPage to DisplayVocabsLVPage

--- a/VokabelTrainer3/VokabelTrainer3/Views/ChapterSelectionLVPage.xaml
+++ b/VokabelTrainer3/VokabelTrainer3/Views/ChapterSelectionLVPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VokabelTrainer3.Views.ChapterSelectionLVPage"
-             x:Name="ChapterSelectionPage">
+             x:Name="ChapterSelectionPage"
+             Title="{Binding Title}">
 
     <ListView ItemsSource="{Binding Chapters}"
               SelectedItem="{Binding IsSelected, Mode=TwoWay}"
