--- a/VokabelTrainer3/VokabelTrainer3/Views/QuizPage.xaml
+++ b/VokabelTrainer3/VokabelTrainer3/Views/QuizPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:converters="clr-namespace:VokabelTrainer3.Views.Converters;assembly=VokabelTrainer3"
-             x:Class="VokabelTrainer3.Views.QuizPage">
+             x:Class="VokabelTrainer3.Views.QuizPage"
+             Title="{Binding Title}">
     
     <ContentPage.Resources>
         <ResourceDictionary>
